--- a/env.yaml
+++ b/env.yaml
@@ -9,5 +9,5 @@ dependencies:
   - conda-forge::tifffile
   - conda-forge::pywavelets
   - conda-forge::jupyterlab
-  - anaconda:seaborn
+  - anaconda::seaborn
   - anaconda::openpyxl 
